--- a/PDS Info Update/Education Info.html
+++ b/PDS Info Update/Education Info.html
@@ -198,12 +198,12 @@
                       <li>
                         <a href="Displinary Action.html">Disciplinary Actions</a>
                       </li>
-                      <li><a href="app-emailbox.html">ACR History</a></li>
+                     <li><a href="ACR History.html">ACR History</a></li>
                      <li><a href="Leave History.html">leave History</a></li>
-                      <li><a href="app-emailbox.html">Posting</a></li>
+                      <li><a href="Posting.html">Posting</a></li>
                       <li><a href="Lien Info.html">Lien Info.</a></li>
-                      <li><a href="app-emailbox.html">Job Status</a></li>
-                      <li><a href="app-emailbox.html">Change Password</a></li>
+                       <li><a href="Job Status.html">Job Status</a></li>
+                      <li><a href="Change Password.html">Change Password</a></li>
                     </ul>
                   </div>
                 </div>
@@ -234,8 +234,8 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li>
-                        <a href="ecommerce-products.html"
+                     <li>
+                        <a href="/Setup/User Administration.html"
                           >User Administration</a
                         >
                       </li>
