--- a/PDS Info Update/Lien Info.html
+++ b/PDS Info Update/Lien Info.html
@@ -210,12 +210,12 @@
                           >Disciplinary Actions</a
                         >
                       </li>
-                      <li><a href="app-emailbox.html">ACR History</a></li>
+                     <li><a href="ACR History.html">ACR History</a></li>
                       <li><a href="Leave History.html">leave History</a></li>
-                      <li><a href="app-emailbox.html">Posting</a></li>
+                      <li><a href="Posting.html">Posting</a></li>
                       <li><a href="Lien Info.html">Lien Info.</a></li>
-                      <li><a href="app-emailbox.html">Job Status</a></li>
-                      <li><a href="app-emailbox.html">Change Password</a></li>
+                       <li><a href="Job Status.html">Job Status</a></li>
+                      <li><a href="Change Password.html">Change Password</a></li>
                     </ul>
                   </div>
                 </div>
@@ -246,8 +246,8 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li>
-                        <a href="ecommerce-products.html"
+                     <li>
+                        <a href="/Setup/User Administration.html"
                           >User Administration</a
                         >
                       </li>
@@ -398,7 +398,7 @@
               <div class="card-body p-4">
                 <div class="card-title">
                   <h5 class="text-dark text-center">
-                    Enter Foreign Travel Info
+                    Enter Lien Info
                   </h5>
                   <hr />
                 </div>
@@ -518,7 +518,7 @@
               <div class="card-body p-4">
                 <div class="card-title">
                   <h5 class="text-dark text-center">
-                    Edit Foreign Travel Info
+                    Edit Lien Info
                   </h5>
                   <hr />
                 </div>
