--- a/PDS Info Update/Official Info.html
+++ b/PDS Info Update/Official Info.html
@@ -203,12 +203,12 @@
                           >Disciplinary Actions</a
                         >
                       </li>
-                      <li><a href="app-emailbox.html">ACR History</a></li>
+                     <li><a href="ACR History.html">ACR History</a></li>
                       <li><a href="Leave History.html">leave History</a></li>
-                      <li><a href="app-emailbox.html">Posting</a></li>
+                      <li><a href="Posting.html">Posting</a></li>
                       <li><a href="Lien Info.html">Lien Info.</a></li>
-                      <li><a href="app-emailbox.html">Job Status</a></li>
-                      <li><a href="app-emailbox.html">Change Password</a></li>
+                       <li><a href="Job Status.html">Job Status</a></li>
+                      <li><a href="Change Password.html">Change Password</a></li>
                     </ul>
                   </div>
                 </div>
@@ -239,8 +239,8 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li>
-                        <a href="ecommerce-products.html"
+                     <li>
+                        <a href="/Setup/User Administration.html"
                           >User Administration</a
                         >
                       </li>
