--- a/Reports/Officer In Deputation.html
+++ b/Reports/Officer In Deputation.html
@@ -71,74 +71,74 @@
                   data-bs-parent="#accordionExample"
                 >
                   <div class="accordion-body">
-					<ul>
-						<li><a href="Short PDS.html">Short PDS</a></li>
-						<li><a href="PDS Printing.html">PDS Printing</a></li>
-						<li>
-						  <a href="Search Officers.html">Search Officers</a>
-						</li>
-						<li><a href="Search Staffs.html">Search Staffs</a></li>
-						<li>
-						  <a href="Grade 9 & Above.html">Grade 9 & Above</a>
-						</li>
-						<li>
-						  <a href="Sub-Assistant Engineers.html"
-							>Sub-Assistent Engineer</a
-						  >
-						</li>
-						<li>
-						  <a href="Class 3 Employee.html">Class 3 Employees</a>
-						</li>
-						<li>
-						  <a href="Class 4 Employee.html">Class 4 Employees</a>
-						</li>
-						<li>
-						  <a href="Current Posting.html">Current Postings</a>
-						</li>
-						<li><a href="Posting Date.html">Posting Date</a></li>
-  
-						<li>
-						  <a href="Vacant Post Officers.html"
-							>Vacant Posts(Officers)</a
-						  >
-						</li>
-						<li>
-						  <a href="Vacant Post Staffs.html"
-							>Vacant Posts(Staff)</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer In Deputation.html"
-							>Officers in Deputation</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer In Lien.html">Officers on Lien</a>
-						</li>
-						<li>
-						  <a href="Officer In Reserve.html"
-							>Officers in Reserve</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer In Foreign.html"
-							>Officers in Foreign Country</a
-						  >
-						</li>
-						<li>
-						  <a href="Officer On Leave.html">Officers on Leave</a>
-						</li>
-						<li>
-						  <a href="PRL Dates.html">PRL Dates of Officers</a>
-						</li>
-						<li><a href="Employee Added.html">Employee Added</a></li>
-						<li><a href="PDS Update.html">PDS Update List</a></li>
-						<li>
-						  <a href="Foreign Travel Report.html"
-							>Foreign Travel Reports</a
-						  >
-						</li>
-					  </ul>
+                    <ul>
+                      <li><a href="Short PDS.html">Short PDS</a></li>
+                      <li><a href="PDS Printing.html">PDS Printing</a></li>
+                      <li>
+                        <a href="Search Officers.html">Search Officers</a>
+                      </li>
+                      <li><a href="Search Staffs.html">Search Staffs</a></li>
+                      <li>
+                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+                      </li>
+                      <li></li>
+                      <li>
+                        <a href="Sub-Assistant Engineers.html"
+                          >Sub-Assistent Engineer</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Class 3 Employee.html">Class 3 Employees</a>
+                      </li>
+                      <li>
+                        <a href="Class 4 Employee.html">Class 4 Employees</a>
+                      </li>
+                      <li>
+                        <a href="Current Posting.html">Current Postings</a>
+                      </li>
+                      <li><a href="Posting Date.html">Posting Date</a></li>
+                      <li>
+                        <a href="Vacant Post Officers.html"
+                          >Vacant Posts(Officers)</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Vacant Post Staffs.html"
+                          >Vacant Posts(Staff)</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Deputation.html"
+                          >Officers in Deputation</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Lien.html">Officers on Lien</a>
+                      </li>
+                      <li>
+                        <a href="Officer In Reserve.html"
+                          >Officers in Reserve</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer In Foreign.html"
+                          >Officers in Foreign Country</a
+                        >
+                      </li>
+                      <li>
+                        <a href="Officer On Leave.html">Officers on Leave</a>
+                      </li>
+                      <li>
+                        <a href="PRL Dates.html">PRL Dates of Officers</a>
+                      </li>
+                      <li><a href="Employee Added.html">Employee Added</a></li>
+                      <li><a href="PDS Update.html">PDS Update List</a></li>
+                      <li>
+                        <a href="Foreign Travel Report.html"
+                          >Foreign Travel Reports</a
+                        >
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -167,39 +167,112 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="Add New Employee.html">Add New Employee</a></li>
-                        <a href="Personal Info.html">Personal Information</a>
-                      </li>
-                      <li><a href="Spouse Info.html">Spouse Info.</a></li>
-                      <li><a href="Children Info.html">Children Info.</a></li>
-                      <li><a href="Language Skill.html">Language Skill </a></li>
-                      <li><a href="Education Info.html">Education Info.</a></li>
                       <li>
-                        <a href="Foreign Travel.html">Foreign Travel Info.</a>
-                      </li>
-                      <li><a href="Training Info.html">Training Info.</a></li>
-                      <li><a href="Service Exam.html">Service Exam</a></li>
-                       <li><a href="Affiliation.html">Affiliations</a></li>
-                      <li><a href="Honours.html">Honours/Award</a></li>
-                      <li><a href="Publications.html">Publication</a></li>
-                      <li>
-                        <a href="Previous Services.html">Previous Services</a>
+                        <a href="/PDS Info Update/Add New Employee.html"
+                          >Add New Employee</a
+                        >
                       </li>
                       <li>
-                        <a href="app-emailbox.html">Official Information</a>
+                        <a href="/PDS Info Update/Personal Info.html"
+                          >Personal Information</a
+                        >
                       </li>
                       <li>
-                        <a href="app-emailbox.html">Promotion Particulars</a>
+                        <a href="/PDS Info Update/Spouse Info.html"
+                          >Spouse Info.</a
+                        >
                       </li>
                       <li>
-                        <a href="app-emailbox.html">Disciplinary Actions</a>
+                        <a href="/PDS Info Update/Children Info.html"
+                          >Children Info.</a
+                        >
                       </li>
-                      <li><a href="app-emailbox.html">ACR History</a></li>
-                      <li><a href="app-emailbox.html">leave History</a></li>
-                      <li><a href="app-emailbox.html">Posting</a></li>
-                      <li><a href="app-emailbox.html">Lien Info.</a></li>
-                      <li><a href="app-emailbox.html">Job Status</a></li>
-                      <li><a href="app-emailbox.html">Change Password</a></li>
+                      <li>
+                        <a href="/PDS Info Update/Language Skill.html"
+                          >Language Skill
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Education Info.html"
+                          >Education Info.</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Foreign Travel.html"
+                          >Foreign Travel Info.</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Training Info.html"
+                          >Training Info.</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Service Exam.html"
+                          >Service Exam</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Affiliation.html"
+                          >Affiliations</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Honours.html"
+                          >Honours/Award</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Publications.html"
+                          >Publication</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Previous Services.html"
+                          >Previous Services</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Official Info.html"
+                          >Official Information</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Promotion Particulars.html"
+                          >Promotion Particulars</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Displinary Action.html"
+                          >Disciplinary Actions</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/ACR History.html"
+                          >ACR History</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Leave History.html"
+                          >leave History</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Posting.html">Posting</a>
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Lien Info.html">Lien Info.</a>
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Job Status.html"
+                          >Job Status</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/PDS Info Update/Change Password.html"
+                          >Change Password</a
+                        >
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -231,64 +304,64 @@
                   <div class="accordion-body">
                     <ul>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="/Setup/User Administration.html"
                           >User Administration</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Officers Of PWD</a>
+                        <a href="/Setup/Offices of PWD.html">Officers Of PWD</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Posts Of PWD</a>
+                        <a href="/Setup/Posts of PWD.html">Posts Of PWD</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Designations</a>
+                        <a href="/Setup/Designations.html">Designations</a>
                       </li>
-                      <li><a href="ecommerce-products.html">BCS Batches</a></li>
-                      <li><a href="ecommerce-products.html">Payscale</a></li>
+                      <li><a href="/Setup/BCS Batches.html">BCS Batches</a></li>
+                      <li><a href="/Setup/PayScales.html">Payscale</a></li>
                       <li>
-                        <a href="ecommerce-products.html">Academic Degree</a>
-                      </li>
-                      <li>
-                        <a href="ecommerce-products.html">Major Subject</a>
-                      </li>
-                      <li>
-                        <a href="ecommerce-products.html">Create institute</a>
+                        <a href="/Setup/Academic Degree.html"
+                          >Academic Degree</a
+                        >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Training Topics</a>
+                        <a href="/Setup/Major Subjects.html">Major Subject</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Training Sponsors</a>
+                        <a href="/Setup/Create Institutes.html"
+                          >Create institute</a
+                        >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Academic Degree</a>
-                      </li>
-                      <li><a href="ecommerce-products.html">Affliation</a></li>
-                      <li>
-                        <a href="ecommerce-products.html">language Names</a>
+                        <a href="/Setup/Training Topics.html"
+                          >Training Topics</a
+                        >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Leaves Types</a>
+                        <a href="/Setup/Training Sponsors.html"
+                          >Training Sponsors</a
+                        >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="/Setup/Academic Degree.html"
+                          >Academic Degree</a
+                        >
+                      </li>
+                      <li><a href="/Setup/Affiliations.html">Affliation</a></li>
+                      <li>
+                        <a href="/Setup/Language Names.html">language Names</a>
+                      </li>
+                      <li>
+                        <a href="/Setup/Leave Types.html">Leaves Types</a>
+                      </li>
+                      <li>
+                        <a href="/Setup/Mark Retired Class 1.html"
                           >Mark Retired (Class 1)</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="/Setup/Mark Retired Class 2.html"
                           >Mark Retired (Class 2)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="ecommerce-products.html"
-                          >Mark Retired (Class 1) (Freedom Fighter)</a
-                        >
-                      </li>
-                      <li>
-                        <a href="ecommerce-products.html"
-                          >Mark Retired (Class 2) (Freedom Fighter)</a
                         >
                       </li>
                     </ul>
