--- a/Setup/User Administration.html
+++ b/Setup/User Administration.html
@@ -29,13 +29,14 @@
     />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
-    <title>Human Resource Management</title>
+
+    <title></title>
   </head>
 
   <body>
     <div class="Header row p-2">
       <div class="col-md-1 img">
-        <img src="/assets/gvt.png" alt="" />
+        <img src="/assets//gvt.png" alt="" />
       </div>
       <div class="col-md-11">
         <h4 class="mb-0">Human Resource Infomation</h4>
@@ -44,9 +45,15 @@
         <p class="mt-0 mb-0">Govt. Of The people republic Of Bangladesh</p>
       </div>
     </div>
-
+    <!--wrapper-->
     <div class="row">
-      <div class="sidebar-wrapper col-md-2" data-simplebar="true">
+      <!--sidebar wrapper -->
+
+      <div
+        style="height: 1200px"
+        class="sidebar-wrapper col-md-2"
+        data-simplebar="true"
+      >
         <!--navigation-->
         <ul class="metismenu" id="menu">
           <li>
@@ -81,7 +88,6 @@
                       <li>
                         <a href="Grade 9 & Above.html">Grade 9 & Above</a>
                       </li>
-                      <li></li>
                       <li>
                         <a href="Sub-Assistant Engineers.html"
                           >Sub-Assistent Engineer</a
@@ -97,6 +103,7 @@
                         <a href="Current Posting.html">Current Postings</a>
                       </li>
                       <li><a href="Posting Date.html">Posting Date</a></li>
+
                       <li>
                         <a href="Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
@@ -168,110 +175,48 @@
                   <div class="accordion-body">
                     <ul>
                       <li>
-                        <a href="/PDS Info Update/Add New Employee.html"
-                          >Add New Employee</a
-                        >
+                        <a href="Add New Employee.html">Add New Employee</a>
                       </li>
                       <li>
-                        <a href="/PDS Info Update/Personal Info.html"
-                          >Personal Information</a
-                        >
+                        <a href="Personal Info.html">Personal Information</a>
                       </li>
+                      <li><a href="Spouse Info.html">Spouse Info.</a></li>
+                      <li><a href="Children Info.html">Children Info.</a></li>
+                      <li><a href="Language Skill.html">Language Skill </a></li>
+                      <li><a href="Education Info.html">Education Info.</a></li>
                       <li>
-                        <a href="/PDS Info Update/Spouse Info.html"
-                          >Spouse Info.</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Children Info.html"
-                          >Children Info.</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Language Skill.html"
-                          >Language Skill
-                        </a>
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Education Info.html"
-                          >Education Info.</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Foreign Travel.html"
+                        <a href="Foreign Travel Info.html"
                           >Foreign Travel Info.</a
                         >
                       </li>
+                      <li><a href="Training Info.html">Training Info.</a></li>
+                      <li><a href="Service Exam.html">Service Exam</a></li>
+                      <li><a href="Affiliation.html">Affiliations</a></li>
+                      <li><a href="Honours.html">Honours/Award</a></li>
+                      <li><a href="Publications.html">Publication</a></li>
                       <li>
-                        <a href="/PDS Info Update/Training Info.html"
-                          >Training Info.</a
-                        >
+                        <a href="Previous Services.html">Previous Services</a>
                       </li>
                       <li>
-                        <a href="/PDS Info Update/Service Exam.html"
-                          >Service Exam</a
-                        >
+                        <a href="Official Info.html">Official Information</a>
                       </li>
                       <li>
-                        <a href="/PDS Info Update/Affiliation.html"
-                          >Affiliations</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Honours.html"
-                          >Honours/Award</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Publications.html"
-                          >Publication</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Previous Services.html"
-                          >Previous Services</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Official Info.html"
-                          >Official Information</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Promotion Particulars.html"
+                        <a href="Promotion Particulars.html"
                           >Promotion Particulars</a
                         >
                       </li>
                       <li>
-                        <a href="/PDS Info Update/Displinary Action.html"
+                        <a href="Displinary Action.html"
                           >Disciplinary Actions</a
                         >
                       </li>
+                      <li><a href="ACR History.html">ACR History</a></li>
+                      <li><a href="Leave History.html">leave History</a></li>
+                      <li><a href="Posting.html">Posting</a></li>
+                      <li><a href="Lien Info.html">Lien Info.</a></li>
+                      <li><a href="Job Status.html">Job Status</a></li>
                       <li>
-                        <a href="/PDS Info Update/ACR History.html"
-                          >ACR History</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Leave History.html"
-                          >leave History</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Posting.html">Posting</a>
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Lien Info.html">Lien Info.</a>
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Job Status.html"
-                          >Job Status</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/PDS Info Update/Change Password.html"
-                          >Change Password</a
-                        >
+                        <a href="Change Password.html">Change Password</a>
                       </li>
                     </ul>
                   </div>
@@ -304,64 +249,64 @@
                   <div class="accordion-body">
                     <ul>
                       <li>
-                        <a href="/Setup/User Administration.html"
+                        <a href="User Administration.html"
                           >User Administration</a
                         >
                       </li>
                       <li>
-                        <a href="/Setup/Offices of PWD.html">Officers Of PWD</a>
+                        <a href="ecommerce-products.html">Officers Of PWD</a>
                       </li>
                       <li>
-                        <a href="/Setup/Posts of PWD.html">Posts Of PWD</a>
+                        <a href="ecommerce-products.html">Posts Of PWD</a>
                       </li>
                       <li>
-                        <a href="/Setup/Designations.html">Designations</a>
+                        <a href="ecommerce-products.html">Designations</a>
                       </li>
-                      <li><a href="/Setup/BCS Batches.html">BCS Batches</a></li>
-                      <li><a href="/Setup/PayScales.html">Payscale</a></li>
+                      <li><a href="ecommerce-products.html">BCS Batches</a></li>
+                      <li><a href="ecommerce-products.html">Payscale</a></li>
                       <li>
-                        <a href="/Setup/Academic Degree.html"
-                          >Academic Degree</a
-                        >
+                        <a href="ecommerce-products.html">Academic Degree</a>
                       </li>
                       <li>
-                        <a href="/Setup/Major Subjects.html">Major Subject</a>
+                        <a href="ecommerce-products.html">Major Subject</a>
                       </li>
                       <li>
-                        <a href="/Setup/Create Institutes.html"
-                          >Create institute</a
-                        >
+                        <a href="ecommerce-products.html">Create institute</a>
                       </li>
                       <li>
-                        <a href="/Setup/Training Topics.html"
-                          >Training Topics</a
-                        >
+                        <a href="ecommerce-products.html">Training Topics</a>
                       </li>
                       <li>
-                        <a href="/Setup/Training Sponsors.html"
-                          >Training Sponsors</a
-                        >
+                        <a href="ecommerce-products.html">Training Sponsors</a>
                       </li>
                       <li>
-                        <a href="/Setup/Academic Degree.html"
-                          >Academic Degree</a
-                        >
+                        <a href="ecommerce-products.html">Academic Degree</a>
                       </li>
-                      <li><a href="/Setup/Affiliations.html">Affliation</a></li>
+                      <li><a href="ecommerce-products.html">Affliation</a></li>
                       <li>
-                        <a href="/Setup/Language Names.html">language Names</a>
+                        <a href="ecommerce-products.html">language Names</a>
                       </li>
                       <li>
-                        <a href="/Setup/Leave Types.html">Leaves Types</a>
+                        <a href="ecommerce-products.html">Leaves Types</a>
                       </li>
                       <li>
-                        <a href="/Setup/Mark Retired Class 1.html"
+                        <a href="ecommerce-products.html"
                           >Mark Retired (Class 1)</a
                         >
                       </li>
                       <li>
-                        <a href="/Setup/Mark Retired Class 2.html"
+                        <a href="ecommerce-products.html"
                           >Mark Retired (Class 2)</a
+                        >
+                      </li>
+                      <li>
+                        <a href="ecommerce-products.html"
+                          >Mark Retired (Class 1) (Freedom Fighter)</a
+                        >
+                      </li>
+                      <li>
+                        <a href="ecommerce-products.html"
+                          >Mark Retired (Class 2) (Freedom Fighter)</a
                         >
                       </li>
                     </ul>
@@ -372,52 +317,123 @@
           </li>
         </ul>
       </div>
-      <!-- PAGE CONTENT -->
+
+      <!--start page wrapper -->
+
       <div class="page-content col-md-8">
         <div class="row">
-          <div class="col-xl-9 mx-auto">
+          <div class="col-xl-6 mx-auto">
             <div class="card">
-              <div class="card-body">
-                <div class="row mb-4">
-                  <div class="col-md-10"><h6>Class 3 Employees List</h6></div>
+              <div class="card-body p-4">
+                <div class="card-title">
+                  <h4
+                    class="mb-4 text-dark text-center text-decoration-underline"
+                  >
+                    Create Or Edit User
+                  </h4>
                 </div>
-                <table class="table table-bordered">
-                  <thead>
-                    <tr class="table-secondary">
-                      <td scope="col">Sl.</td>
-                      <td scope="col">Grad No.</td>
-                      <td>Full Name</td>
-                      <td>Designation</td>
-                      <td scope="col">Status</td>
-                      <td scope="col">Posting</td>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                    </tr>
-                  </tbody>
-                </table>
+
+                <form>
+                  <div class="row align-items-center g-2">
+                    <div class="row">
+                      <div class="col-md-1"></div>
+                      <div class="col-md-4">
+                        <label for="inputClass" class="col-form-label"
+                          >User Name</label
+                        >
+                      </div>
+                      <div class="col-md-6">
+                        <input
+                          type="text"
+                          aria-label="name"
+                          class="form-control"
+                        />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-1"></div>
+                      <div class="col-md-4">
+                        <label for="inputClass" class="col-form-label"
+                          >User Type</label
+                        >
+                      </div>
+                      <div class="col-md-6">
+                        <select
+                          class="form-select"
+                          aria-label="Default select example"
+                        ></select>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-1"></div>
+                      <div class="col-md-4">
+                        <label for="inputClass" class="col-form-label"
+                          >Password</label
+                        >
+                      </div>
+                      <div class="col-md-6">
+                        <input
+                          type="password"
+                          id="inputPassword6"
+                          class="form-control"
+                          aria-describedby="passwordHelpInline"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-1"></div>
+                      <div class="col-md-4">
+                        <label for="inputClass" class="col-form-label">
+                          Confirm Password
+                        </label>
+                      </div>
+                      <div class="col-md-6">
+                        <input
+                          type="password"
+                          id="inputPassword6"
+                          class="form-control"
+                          aria-describedby="passwordHelpInline"
+                        />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-1"></div>
+                      <div class="col-md-4">
+                        <label for="inputClass" class="col-form-label">
+                          Office
+                        </label>
+                      </div>
+                      <div class="col-md-6">
+                        <select
+                          class="form-select"
+                          aria-label="Default select example"
+                        ></select>
+                      </div>
+                    </div>
+
+                    <div class="col-md-12 text-center">
+                      <button type="submit" class="btn btn-success">
+                        Save
+                      </button>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <!--end page wrapper -->
+
+      <footer class="page-footer">
+        <p class="mb-0">Designed & Developed BY Shell Technologies</p>
+      </footer>
     </div>
 
-    <footer class="page-footer">
-      <p class="mb-0">Designed & Developesd BY Shell Technologies</p>
-    </footer>
-
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
+      
     ></script>
     <!--plugins-->
     <script src="/assets/js/jquery.min.js"></script>
