--- a/PDS Info Update/Job Status.html
+++ b/PDS Info Update/Job Status.html
@@ -49,11 +49,7 @@
     <div class="row">
       <!--sidebar wrapper -->
 
-      <div
-        style="height: 1200px"
-        class="sidebar-wrapper col-md-2"
-        data-simplebar="true"
-      >
+      <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
         <ul class="metismenu" id="menu">
           <li>
@@ -79,69 +75,69 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
-                      <li><a href="PDS Printing.html">PDS Printing</a></li>
+                      <li><a href="/Reports/Short PDS.html">Short PDS</a></li>
+                      <li><a href="/Reports/PDS Printing.html">PDS Printing</a></li>
                       <li>
-                        <a href="Search Officers.html">Search Officers</a>
+                        <a href="/Reports/Search Officers.html">Search Officers</a>
                       </li>
-                      <li><a href="Search Staffs.html">Search Staffs</a></li>
+                      <li><a href="/Reports/Search Staffs.html">Search Staffs</a></li>
                       <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+                        <a href="/Reports/Grade 9 & Above.html">Grade 9 & Above</a>
                       </li>
                       <li>
-                        <a href="Sub-Assistant Engineers.html"
+                        <a href="/Reports/Sub-Assistant Engineers.html"
                           >Sub-Assistent Engineer</a
                         >
                       </li>
                       <li>
-                        <a href="Class 3 Employee.html">Class 3 Employees</a>
+                        <a href="/Reports/Class 3 Employee.html">Class 3 Employees</a>
                       </li>
                       <li>
-                        <a href="Class 4 Employee.html">Class 4 Employees</a>
+                        <a href="/Reports/Class 4 Employee.html">Class 4 Employees</a>
                       </li>
                       <li>
-                        <a href="Current Posting.html">Current Postings</a>
+                        <a href="/Reports/Current Posting.html">Current Postings</a>
                       </li>
-                      <li><a href="Posting Date.html">Posting Date</a></li>
+                      <li><a href="/Reports/Posting Date.html">Posting Date</a></li>
 
                       <li>
-                        <a href="Vacant Post Officers.html"
+                        <a href="/Reports/Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
                         >
                       </li>
                       <li>
-                        <a href="Vacant Post Staffs.html"
+                        <a href="/Reports/Vacant Post Staffs.html"
                           >Vacant Posts(Staff)</a
                         >
                       </li>
                       <li>
-                        <a href="Officer In Deputation.html"
+                        <a href="/Reports/Officer In Deputation.html"
                           >Officers in Deputation</a
                         >
                       </li>
                       <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
+                        <a href="/Reports/Officer In Lien.html">Officers on Lien</a>
                       </li>
                       <li>
-                        <a href="Officer In Reserve.html"
+                        <a href="/Reports/Officer In Reserve.html"
                           >Officers in Reserve</a
                         >
                       </li>
                       <li>
-                        <a href="Officer In Foreign.html"
+                        <a href="/Reports/Officer In Foreign.html"
                           >Officers in Foreign Country</a
                         >
                       </li>
                       <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
+                        <a href="/Reports/Officer On Leave.html">Officers on Leave</a>
                       </li>
                       <li>
-                        <a href="PRL Dates.html">PRL Dates of Officers</a>
+                        <a href="/Reports/PRL Dates.html">PRL Dates of Officers</a>
                       </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
+                      <li><a href="/Reports/Employee Added.html">Employee Added</a></li>
+                      <li><a href="/Reports/PDS Update.html">PDS Update List</a></li>
                       <li>
-                        <a href="Foreign Travel Report.html"
+                        <a href="/Reports/Foreign Travel Report.html"
                           >Foreign Travel Reports</a
                         >
                       </li>
@@ -210,11 +206,11 @@
                           >Disciplinary Actions</a
                         >
                       </li>
-                     <li><a href="ACR History.html">ACR History</a></li>
+                      <li><a href="ACR History.html">ACR History</a></li>
                       <li><a href="Leave History.html">leave History</a></li>
                       <li><a href="Posting.html">Posting</a></li>
                       <li><a href="Lien Info.html">Lien Info.</a></li>
-                      <li><a href="Job Status.html">Job Status</a></li>
+                       <li><a href="Job Status.html">Job Status</a></li>
                       <li><a href="Change Password.html">Change Password</a></li>
                     </ul>
                   </div>
@@ -252,58 +248,58 @@
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Officers Of PWD</a>
+                        <a href="/Setup/Offices of PWD.html">Officers Of PWD</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Posts Of PWD</a>
+                        <a href="/Setup/Posts of PWD.html">Posts Of PWD</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Designations</a>
+                        <a href="/Setup/Designations.html">Designations</a>
                       </li>
-                      <li><a href="ecommerce-products.html">BCS Batches</a></li>
-                      <li><a href="ecommerce-products.html">Payscale</a></li>
+                      <li><a href="/Setup/BCS Batches.html">BCS Batches</a></li>
+                      <li><a href="/Setup/PayScales.html">Payscale</a></li>
                       <li>
-                        <a href="ecommerce-products.html">Academic Degree</a>
-                      </li>
-                      <li>
-                        <a href="ecommerce-products.html">Major Subject</a>
+                        <a href="/Setup/Academic Degree.html">Academic Degree</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Create institute</a>
+                        <a href="/Setup/Major Subjects.html">Major Subject</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Training Topics</a>
+                        <a href="/Setup/Create Institutes.html">Create institute</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Training Sponsors</a>
+                        <a href="/Setup/Training Topics.html">Training Topics</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Academic Degree</a>
-                      </li>
-                      <li><a href="ecommerce-products.html">Affliation</a></li>
-                      <li>
-                        <a href="ecommerce-products.html">language Names</a>
+                        <a href="/Setup/Training Sponsors.html">Training Sponsors</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Leaves Types</a>
+                        <a href="/Setup/Academic Degree.html">Academic Degree</a>
+                      </li>
+                      <li><a href="/Setup/Affiliations.html">Affliation</a></li>
+                      <li>
+                        <a href="/Setup/Language Names.html">language Names</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="/Setup/Leave Types.html">Leaves Types</a>
+                      </li>
+                      <li>
+                        <a href="/Setup/Mark Retired Class 1.html"
                           >Mark Retired (Class 1)</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="/Setup/Mark Retired Class 2.html"
                           >Mark Retired (Class 2)</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="/Setup/Mark Retired Class 1 Freedom Fighter.html"
                           >Mark Retired (Class 1) (Freedom Fighter)</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="/Setup/Mark Retired Class 2 Freedom Fighter.html"
                           >Mark Retired (Class 2) (Freedom Fighter)</a
                         >
                       </li>
