--- a/Reports/Search Officers.html
+++ b/Reports/Search Officers.html
@@ -365,6 +365,16 @@
                           >Mark Retired (Class 2)</a
                         >
                       </li>
+                      <li>
+                        <a href="/Setup/Mark Retired Class 1 Freedom Fighter.html"
+                          >Mark Retired (Class 1) (Freedom Fighter)</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/Setup/Mark Retired Class 2 Freedom Fighter.html"
+                          >Mark Retired (Class 2) (Freedom Fighter)</a
+                        >
+                      </li>
                     </ul>
                   </div>
                 </div>
