--- a/Setup/User Administration.html
+++ b/Setup/User Administration.html
@@ -49,11 +49,7 @@
     <div class="row">
       <!--sidebar wrapper -->
 
-      <div
-        style="height: 1200px"
-        class="sidebar-wrapper col-md-2"
-        data-simplebar="true"
-      >
+      <div class="sidebar-wrapper col-md-2" data-simplebar="true">
         <!--navigation-->
         <ul class="metismenu" id="menu">
           <li>
@@ -79,69 +75,69 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li><a href="Short PDS.html">Short PDS</a></li>
-                      <li><a href="PDS Printing.html">PDS Printing</a></li>
+                      <li><a href="/Reports/Short PDS.html">Short PDS</a></li>
+                      <li><a href="/Reports/PDS Printing.html">PDS Printing</a></li>
                       <li>
-                        <a href="Search Officers.html">Search Officers</a>
+                        <a href="/Reports/Search Officers.html">Search Officers</a>
                       </li>
-                      <li><a href="Search Staffs.html">Search Staffs</a></li>
+                      <li><a href="/Reports/Search Staffs.html">Search Staffs</a></li>
                       <li>
-                        <a href="Grade 9 & Above.html">Grade 9 & Above</a>
+                        <a href="/Reports/Grade 9 & Above.html">Grade 9 & Above</a>
                       </li>
                       <li>
-                        <a href="Sub-Assistant Engineers.html"
+                        <a href="/Reports/Sub-Assistant Engineers.html"
                           >Sub-Assistent Engineer</a
                         >
                       </li>
                       <li>
-                        <a href="Class 3 Employee.html">Class 3 Employees</a>
+                        <a href="/Reports/Class 3 Employee.html">Class 3 Employees</a>
                       </li>
                       <li>
-                        <a href="Class 4 Employee.html">Class 4 Employees</a>
+                        <a href="/Reports/Class 4 Employee.html">Class 4 Employees</a>
                       </li>
                       <li>
-                        <a href="Current Posting.html">Current Postings</a>
+                        <a href="/Reports/Current Posting.html">Current Postings</a>
                       </li>
-                      <li><a href="Posting Date.html">Posting Date</a></li>
+                      <li><a href="/Reports/Posting Date.html">Posting Date</a></li>
 
                       <li>
-                        <a href="Vacant Post Officers.html"
+                        <a href="/Reports/Vacant Post Officers.html"
                           >Vacant Posts(Officers)</a
                         >
                       </li>
                       <li>
-                        <a href="Vacant Post Staffs.html"
+                        <a href="/Reports/Vacant Post Staffs.html"
                           >Vacant Posts(Staff)</a
                         >
                       </li>
                       <li>
-                        <a href="Officer In Deputation.html"
+                        <a href="/Reports/Officer In Deputation.html"
                           >Officers in Deputation</a
                         >
                       </li>
                       <li>
-                        <a href="Officer In Lien.html">Officers on Lien</a>
+                        <a href="/Reports/Officer In Lien.html">Officers on Lien</a>
                       </li>
                       <li>
-                        <a href="Officer In Reserve.html"
+                        <a href="/Reports/Officer In Reserve.html"
                           >Officers in Reserve</a
                         >
                       </li>
                       <li>
-                        <a href="Officer In Foreign.html"
+                        <a href="/Reports/Officer In Foreign.html"
                           >Officers in Foreign Country</a
                         >
                       </li>
                       <li>
-                        <a href="Officer On Leave.html">Officers on Leave</a>
+                        <a href="/Reports/Officer On Leave.html">Officers on Leave</a>
                       </li>
                       <li>
-                        <a href="PRL Dates.html">PRL Dates of Officers</a>
+                        <a href="/Reports/PRL Dates.html">PRL Dates of Officers</a>
                       </li>
-                      <li><a href="Employee Added.html">Employee Added</a></li>
-                      <li><a href="PDS Update.html">PDS Update List</a></li>
+                      <li><a href="/Reports/Employee Added.html">Employee Added</a></li>
+                      <li><a href="/Reports/PDS Update.html">PDS Update List</a></li>
                       <li>
-                        <a href="Foreign Travel Report.html"
+                        <a href="/Reports/Foreign Travel Report.html"
                           >Foreign Travel Reports</a
                         >
                       </li>
@@ -175,49 +171,47 @@
                   <div class="accordion-body">
                     <ul>
                       <li>
-                        <a href="Add New Employee.html">Add New Employee</a>
+                        <a href="/PDS Info Update/Add New Employee.html">Add New Employee</a>
                       </li>
                       <li>
-                        <a href="Personal Info.html">Personal Information</a>
+                        <a href="/PDS Info Update/Personal Info.html">Personal Information</a>
                       </li>
-                      <li><a href="Spouse Info.html">Spouse Info.</a></li>
-                      <li><a href="Children Info.html">Children Info.</a></li>
-                      <li><a href="Language Skill.html">Language Skill </a></li>
-                      <li><a href="Education Info.html">Education Info.</a></li>
+                      <li><a href="/PDS Info Update/Spouse Info.html">Spouse Info.</a></li>
+                      <li><a href="/PDS Info Update/Children Info.html">Children Info.</a></li>
+                      <li><a href="/PDS Info Update/Language Skill.html">Language Skill </a></li>
+                      <li><a href="/PDS Info Update/Education Info.html">Education Info.</a></li>
                       <li>
-                        <a href="Foreign Travel Info.html"
+                        <a href="/PDS Info Update/Foreign Travel Info.html"
                           >Foreign Travel Info.</a
                         >
                       </li>
-                      <li><a href="Training Info.html">Training Info.</a></li>
-                      <li><a href="Service Exam.html">Service Exam</a></li>
-                      <li><a href="Affiliation.html">Affiliations</a></li>
-                      <li><a href="Honours.html">Honours/Award</a></li>
-                      <li><a href="Publications.html">Publication</a></li>
+                      <li><a href="/PDS Info Update/Training Info.html">Training Info.</a></li>
+                      <li><a href="/PDS Info Update/Service Exam.html">Service Exam</a></li>
+                      <li><a href="/PDS Info Update/Affiliation.html">Affiliations</a></li>
+                      <li><a href="/PDS Info Update/Honours.html">Honours/Award</a></li>
+                      <li><a href="/PDS Info Update/Publications.html">Publication</a></li>
                       <li>
-                        <a href="Previous Services.html">Previous Services</a>
+                        <a href="/PDS Info Update/Previous Services.html">Previous Services</a>
+                      </li>
+                     <li>
+                        <a href="/PDS Info Update/Official Info.html">Official Information</a>
                       </li>
                       <li>
-                        <a href="Official Info.html">Official Information</a>
-                      </li>
-                      <li>
-                        <a href="Promotion Particulars.html"
+                        <a href="/PDS Info Update/Promotion Particulars.html"
                           >Promotion Particulars</a
                         >
                       </li>
                       <li>
-                        <a href="Displinary Action.html"
+                        <a href="/PDS Info Update/Displinary Action.html"
                           >Disciplinary Actions</a
                         >
                       </li>
-                      <li><a href="ACR History.html">ACR History</a></li>
-                      <li><a href="Leave History.html">leave History</a></li>
-                      <li><a href="Posting.html">Posting</a></li>
-                      <li><a href="Lien Info.html">Lien Info.</a></li>
-                      <li><a href="Job Status.html">Job Status</a></li>
-                      <li>
-                        <a href="Change Password.html">Change Password</a>
-                      </li>
+                      <li><a href="/PDS Info Update/ACR History.html">ACR History</a></li>
+                      <li><a href="/PDS Info Update/Leave History.html">leave History</a></li>
+                      <li><a href="/PDS Info Update/Posting.html">Posting</a></li>
+                      <li><a href="/PDS Info Update/Lien Info.html">Lien Info.</a></li>
+                       <li><a href="/PDS Info Update/Job Status.html">Job Status</a></li>
+                      <li><a href="/PDS Info Update/Change Password.html">Change Password</a></li>
                     </ul>
                   </div>
                 </div>
@@ -248,67 +242,68 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                      <li>
+                     <li>
                         <a href="User Administration.html"
                           >User Administration</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Officers Of PWD</a>
+                        <a href="Offices of PWD.html">Officers Of PWD</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Posts Of PWD</a>
+                        <a href="Posts of PWD.html">Posts Of PWD</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Designations</a>
+                        <a href="Designations.html">Designations</a>
                       </li>
-                      <li><a href="ecommerce-products.html">BCS Batches</a></li>
-                      <li><a href="ecommerce-products.html">Payscale</a></li>
+                      <li><a href="BCS Batches.html">BCS Batches</a></li>
+                      <li><a href="PayScales.html">Payscale</a></li>
                       <li>
-                        <a href="ecommerce-products.html">Academic Degree</a>
-                      </li>
-                      <li>
-                        <a href="ecommerce-products.html">Major Subject</a>
+                        <a href="Academic Degree.html">Academic Degree</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Create institute</a>
+                        <a href="Major Subjects.html">Major Subject</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Training Topics</a>
+                        <a href="Create Institutes.html">Create institute</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Training Sponsors</a>
+                        <a href="Training Topics.html">Training Topics</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Academic Degree</a>
-                      </li>
-                      <li><a href="ecommerce-products.html">Affliation</a></li>
-                      <li>
-                        <a href="ecommerce-products.html">language Names</a>
+                        <a href="Training Sponsors.html">Training Sponsors</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html">Leaves Types</a>
+                        <a href="Academic Degree.html">Academic Degree</a>
+                      </li>
+                      <li><a href="Affiliations.html">Affliation</a></li>
+                      <li>
+                        <a href="Language Names.html">language Names</a>
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="Leave Types.html">Leaves Types</a>
+                      </li>
+                      <li>
+                        <a href="Mark Retired Class 1.html"
                           >Mark Retired (Class 1)</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="Mark Retired Class 2.html"
                           >Mark Retired (Class 2)</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="Mark Retired Class 1.html"
                           >Mark Retired (Class 1) (Freedom Fighter)</a
                         >
                       </li>
                       <li>
-                        <a href="ecommerce-products.html"
+                        <a href="Mark Retired Class 2.html"
                           >Mark Retired (Class 2) (Freedom Fighter)</a
                         >
                       </li>
+                   
                     </ul>
                   </div>
                 </div>
