--- a/Reports/Vacant Post Staffs.html
+++ b/Reports/Vacant Post Staffs.html
@@ -340,15 +340,8 @@
                           >Training Topics</a
                         >
                       </li>
-                      <li>
-                        <a href="/Setup/Training Sponsors.html"
-                          >Training Sponsors</a
-                        >
-                      </li>
-                      <li>
-                        <a href="/Setup/Academic Degree.html"
-                          >Academic Degree</a
-                        >
+                       <li>
+                        <a href="/Setup/Training Sponsors.html">Training Sponsors</a>
                       </li>
                       <li><a href="/Setup/Affiliations.html">Affliation</a></li>
                       <li>
