--- a/Setup/User Administration.html
+++ b/Setup/User Administration.html
@@ -365,9 +365,7 @@
                       <li>
                         <a href="Training Sponsors.html">Training Sponsors</a>
                       </li>
-                      <li>
-                        <a href="Academic Degree.html">Academic Degree</a>
-                      </li>
+                     
                       <li><a href="Affiliations.html">Affliation</a></li>
                       <li>
                         <a href="Language Names.html">language Names</a>
@@ -385,13 +383,13 @@
                           >Mark Retired (Class 2)</a
                         >
                       </li>
-                      <li>
-                        <a href="Mark Retired Class 1.html"
+                     <li>
+                        <a href="Mark Retired Class 1 Freedom Fighter.html"
                           >Mark Retired (Class 1) (Freedom Fighter)</a
                         >
                       </li>
                       <li>
-                        <a href="Mark Retired Class 2.html"
+                        <a href="Mark Retired Class 2 Freedom Fighter.html"
                           >Mark Retired (Class 2) (Freedom Fighter)</a
                         >
                       </li>
@@ -491,6 +489,7 @@
                               aria-describedby="passwordHelpInline"
                             />
                           </div>
+                          
                         </div>
 
                         <div class="row">
