--- a/Setup/Designations.html
+++ b/Setup/Designations.html
@@ -385,13 +385,13 @@
                           >Mark Retired (Class 2)</a
                         >
                       </li>
-                      <li>
-                        <a href="Mark Retired Class 1.html"
+                       <li>
+                        <a href="Mark Retired Class 1 Freedom Fighter.html"
                           >Mark Retired (Class 1) (Freedom Fighter)</a
                         >
                       </li>
                       <li>
-                        <a href="Mark Retired Class 2.html"
+                        <a href="Mark Retired Class 2 Freedom Fighter.html"
                           >Mark Retired (Class 2) (Freedom Fighter)</a
                         >
                       </li>
