--- a/Setup/Academic Degree.html
+++ b/Setup/Academic Degree.html
@@ -30,7 +30,7 @@
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
 
-    <title></title>
+    <title>Human Resource Management</title>
   </head>
 
   <body>
