--- a/PDS Info Update/ACR History.html
+++ b/PDS Info Update/ACR History.html
@@ -30,7 +30,8 @@
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="/assets/css/icons.css" rel="stylesheet" />
 
-    <title></title>
+    <title>Human Resource Management</title>
+    
   </head>
 
   <body>
